--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List 5</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="intro"><span class="Author">Author:-</span><br>Muhammad Ashfaq <br>CCO-116722 <br>Johar Town Lahore
+    </div>
 
 <p>
 
